Made marginally less ugly

--- a/hellodjango/templates/test.html
+++ b/hellodjango/templates/test.html
@@ -7,10 +7,18 @@
 	
 </head>
 <body>
-
-	<h1>POE Lot B Parking Spot Detector</h1>
-
-	<p>Bam, bam, bam, bam!</p>
-	<img src="static/pug.jpg" alt="C'est la vie">
+	<div class="layout">
+		<div class="center">
+			<h1>Is there a parking spot in Lot B?</h1>
+			<div id = "yes">
+				<h2>Yes</h2>
+			</div>
+			<div id = "no">
+				<h2>No</h2>
+			</div>
+			<img src="static/pug.jpg" alt="C'est la vie">
+		</div>
+		<div id="right"></div>
+	</div>
 </body>
 </html>
