--- a/hellodjango/static/test.css
+++ b/hellodjango/static/test.css
@@ -1,4 +1,17 @@
-body{
-	background-color:blue;
-	font-color:white;
+@font-face { font-family: CodeBold; src: url('fonts/CODEBold.otf'); } 
+@font-face { font-family: CodeLight; src: url('fonts/CODEBoldELight.otf'); } 
+body{	
+	font-family: 'CodeBold', Arial, Sans-Serif;
+	letter-spacing: 3px;
+	font-size: 24px;
+}
+
+div.layout{
+	text-align: center;
+}
+
+div.center{
+	position:absolute;
+	width:700px;
+	left: 25%;
 }
